--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
     <title>Tushar Mohan | Portfolio </title>
+    <link rel="icon" type="image/x-icon" href="favicon.png">
 </head>
 <body>  
     <!-- <div class="container heading">
@@ -21,6 +22,25 @@
             <h1>I am Tushar Mohan.</h1>
             <span id="typed"></span>
         </div>
+    </div>
+    <div class="row container">
+        <div class="col-6"></div>
+        <div class="col-6">
+            <h2 class="">About</h2>
+            <p>
+                My name is <b> Tushar Mohan</b>, and I am from India. 
+                I am a focused and ambitious <b>Computer Science Junior</b>, with an innate love for innovation. 
+                A reliable team worker with excellent leadership, organizational, and communication skills. 
+                Looking forward to contributing towards advancement in Artificial Intelligence and Machine Learning.
+                My research interests include Natural Language Processing, Deep Learning, Machine Learning and Web Development.
+            </p>
+        </div>
+        <!-- <div class="container">
+            <a href="">Download CV</a>
+        </div> -->
+    </div>
+    <div class="container">
+
     </div>
     
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
