--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         <div class="container">
         </div>
         <div class="head">
-            <h3>Hey There! </h3>
-            <h1>I am Tushar Mohan.</h1>
-            <span id="typed"></span>
+            <h3 class="heading--half-colored">Hey There! </h3>
+            <h1 class="heading--half-colored">I am Tushar Mohan.</h1>
+            <span id="typed" class=""></span>
         </div>
     </div>
     <div class="row container">
         <div class="col-6"></div>
         <div class="col-6">
-            <h2 class="">About</h2>
+            <h2 class="heading--half-colored ">About</h2>
             <p>
                 My name is <b> Tushar Mohan</b>, and I am from India. 
                 I am a focused and ambitious <b>Computer Science Junior</b>, with an innate love for innovation. 
@@ -40,7 +40,6 @@
         </div> -->
     </div>
     <div class="container">
-
     </div>
     
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
