--- a/index.html
+++ b/index.html
@@ -63,20 +63,17 @@
 								<div class="intro">
 									<h1 class="major">Journey</h1>
 									<p>
-										<b>No!</b> It is no the usual childhood👶love for technology🖥. It is the only thing I am good at, precisely. 
+										<b>No!</b> It is not the usual childhood👶love for technology🖥. It is the only thing I am good at, precisely. 
 										<br> I love to explore and was curious about tech products ever since iPad was introduced to me. 
 										<br> Rest is history. Every step🚶‍♂️ from there on was to understand what goes on behind the scenes. 
 									</p>
 								</div>
 								<div class="inner span-3">
-									<pre><code>i = 0;
-
-if (iPad) {
-	// start coding.
-}
-else {
+									<pre><code>
+while (!iPad) {
 	// enjoy!!
 }
+// start coding.
 									</code></pre>
 									<!-- <ul class="grid-icons three connected">
 										<li><span class="icon fa-gem"><span class="label">Lorem</span></span></li>
@@ -151,8 +148,8 @@ else {
 						<!-- Panel (Spotlight) -->
 						<section class="panel spotlight medium right" id="first">
 							<div class="content span-7">
-								<h1 class="major">Experience</h1>
-								<h3 >Memboro</h3>
+								<h1 class="major">Memboro</h1>
+								<h3 >Oct 2020 - May 2022</h3>
 								<p style="font-weight: bolder;">
 									This was the first large scale website I ever built. 
 									Tech stack I used was Django, PostgresSql and <i class="fab fa-aws"></i>.
@@ -186,6 +183,17 @@ else {
 									<a href="images/gallery/fulls/09.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
 								</div>
 							</section> -->
+						<!-- Panel -->
+							<section class="panel">
+								<div class="intro color0">
+									<h1 class="major">MIDAS</h1>
+									<p>
+										I joined <a href="https://midas.iiitd.edu.in/">MIDAS lab</a> as a website developer.
+										I developed the backend for an Achievements webapp on Django. Internally hosted on IIIT Delhi servers.
+									</p>
+								</div>
+							</section>
+
 						<!-- Panel -->
 							<section class="panel">
 								<div class="intro color1-alt">
@@ -230,6 +238,16 @@ else {
 								</div>
 								<div class="image filtered span-2-5" data-position="top">
 									<img src="images/Precog_Logo.png" alt="" />
+								</div>
+							</section>
+						<!-- Panel -->
+							<section class="panel">
+								<div class="intro color1-alt">
+									<h1 class="major">ExtraMarks</h1>
+									<p>
+										I worked under <a href="https://scholar.google.com/citations?user=zgaqvNQAAAAJ&hl=en"> Prof. Mukesh Mohania</a> in collaboration with ExtraMarks on a research project.
+										A patent for the work done is being drafted.
+									</p>
 								</div>
 							</section>
 						
