--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ while (!iPad) {
 										<a href="images/ssr.png" class="image filtered span-3" data-position="center"><img src="images/ssr.png" alt="" /></a>
 										<a href="images/case2022.png" class="image filtered span-3" data-position="bottom"><img src="images/case2022.png" alt="" /></a>
 									</div>
-									<a href="images/tale-of-two-sides.png" class="image filtered span-2-5" data-position="top"><img src="images/tale-of-two-sides.png" alt="" /></a>
+									<a href="images/tale-of-two-sides.png" class="image filtered span-3" data-position="left"><img src="images/tale-of-two-sides.png" alt="" /></a>
 									<!-- <div class="group span-4-5">
 										<a href="images/gallery/fulls/05.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/06.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
